--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -13,12 +14,12 @@
         <p>Isso é o header</p>
     </header>
     <main>
-        <h1>Eleve seu negócio digital <strong>a outro nível com um Front-End de qualidade!</strong></h1>
-        <p>Olá! Sou Laura Perroni, desenvolvedora Full-Stack com especialidade em Spring e React. Ajudo pequenos
+        <h1>Eleve seu negócio digital a outro nível <strong>com um Front-End de qualidade!</strong></h1>
+        <p>Olá! Sou Laura Perroni, desenvolvedora Full-Stack com especialidade em <strong>Spring e React.</strong> Ajudo pequenos
             negócios e designers a colocar em prática boas ideias e criar projetos inovadores. Vamos conversar?</p>
         <a href="https://www.linkedin.com/in/laura-perroni/">Linkedin</a>
         <a href="https://github.com/lauraperroni">Github</a>
-        <img src="cat.jpg" alt="gatinho">
+        <img src="imagem.png" alt="laura sorrindo">
     </main>
     <footer>
         <p>Isso é o footer</p>
