CSS and Index additions

--- a/index.html
+++ b/index.html
@@ -13,14 +13,22 @@
     <header>
         <p>Isso é o header</p>
     </header>
-    <main>
-        <h1>Eleve seu negócio digital a outro nível <strong>com um Front-End de qualidade!</strong></h1>
-        <p>Olá! Sou Laura Perroni, desenvolvedora Full-Stack com especialidade em <strong>Spring e React.</strong> Ajudo pequenos
-            negócios e designers a colocar em prática boas ideias e criar projetos inovadores. Vamos conversar?</p>
-        <a href="https://www.linkedin.com/in/laura-perroni/">Linkedin</a>
-        <a href="https://github.com/lauraperroni">Github</a>
+
+    <main class="apresentacao">
+        <section class="apresentacao__conteudo">
+            <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível <strong class="titulo-destaque">com um Front-End de
+                    qualidade!</strong></h1>
+            <p class="apresentacao__conteudo__paragrafo">Olá! Sou Laura Perroni, desenvolvedora Full-Stack com especialidade em <strong>Spring e React.</strong>
+                Ajudo
+                pequenos
+                negócios e designers a colocar em prática boas ideias e criar projetos inovadores. Vamos conversar?</p>
+            <a href="https://www.linkedin.com/in/laura-perroni/">Linkedin</a>
+            <a href="https://github.com/lauraperroni">Github</a>
+        </section>
+
         <img src="imagem.png" alt="laura sorrindo">
     </main>
+
     <footer>
         <p>Isso é o footer</p>
     </footer>
